enterprise-app/myproject/deploy/yamls/customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: customers
  name: customers
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: customers
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: customers
      name: customers
    spec:
      containers:
        - image: default-route-openshift-image-registry.apps-crc.testing/enterprise-app/customers:latest
          imagePullPolicy: Always
          name: customers
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: "0"
              memory: "0"
      restartPolicy: Always
      securityContext: {}
status: {}
