enterprise-app/myproject/deploy/yamls/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: gateway
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: gateway
      name: gateway
    spec:
      containers:
        - env:
            - name: JBP_CONFIG_SPRING_AUTO_RECONFIGURATION
              value: '{ enabled: false }'
            - name: SPRING_PROFILES_ACTIVE
              value: dev
          image: default-route-openshift-image-registry.apps-crc.testing/enterprise-app/gateway:latest
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: "0"
              memory: "0"
      restartPolicy: Always
      securityContext: {}
status: {}
