enterprise-app/myproject/deploy/yamls/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: frontend
  name: frontend
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: frontend
  type: ClusterIP
status:
  loadBalancer: {}
