enterprise-app/myproject/deploy/yamls/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: frontend
  name: frontend
spec:
  host: router-enterprise-app.frontend.apps-crc.testing
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: frontend
    weight: 1
status:
  ingress:
    - {}
