enterprise-app/myproject/deploy/yamls/gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: gateway
  name: gateway
spec:
  host: router-enterprise-app.apps-crc.testing
  path: /gateway
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: gateway
    weight: 1
status:
  ingress:
    - {}
