enterprise-app/myproject/deploy/yamls/orders-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: orders
  name: orders
spec:
  host: router-enterprise-app.apps-crc.testing
  path: /orders
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: orders
    weight: 1
status:
  ingress:
    - {}
